<resources>
    <string name="app_name">ShoeStoreApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_shoeApp">Welcome to ShoeApp</string>
    <string name="todo">TODO</string>
    <string name="user_name">User Name</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="welcomeMessage">\t\t\t\t\t\t Welcome in the shoeApp\n \t\t\t\t\t\t you can add a new item\n \t\t\t with its name, size and more! \n \t\t\t\t smoothly and wonderfully!\n \t\t\t\t\t So explore the app now</string>
    <string name="InstructionMessage">\t\t\t\t\t\t\t\t Instructions\n You can add a new item by \t\t pressing the add button, entering your product data, saving it, and displaying it. In case you want to log out, click on the three dots in the menu and press logout</string>
    <string name="next">Next</string>
    <string name="logout_menu">Logout</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="shoe_name">shoe name</string>
    <string name="shoe_size">shoe size</string>
    <string name="shoe_company">shoe company</string>
    <string name="description">description</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_btn">Save</string>
    <string name="shoe_size_text">Shoe size</string>
    <string name="shoe_company_text">Shoe Company</string>
    <string name="shoe_description_text">Shoe Description</string>
    <string name="todo_x">TODO</string>
    <string name="image_of_shoe">Image of shoe</string>
    <string name="company">company</string>
    <string name="name">name</string>
    <string name="name_shoe">Name</string>
    <string name="size">size</string>
    <string name="button">button</string>

</resources>